kubernetes/tinkoff-stock-app/deploy_tinkoff-stock-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinkoff-stock-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinkoff-stock-app
  strategy:
    # стратегия обновления без downtime (уже в % можно писать при большом кол-ве реплик)
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tinkoff-stock-app
    spec:
      containers:
        - image: devalurum/tinkoff-stock-app:latest
          name: tinkoff-stock-app
          ports:
            - containerPort: 8081
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8091
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8091
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
            initialDelaySeconds: 15
