kubernetes/tinkoff-stock-app/service_tinkoff-stock-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinkoff-stock-app
spec:
  selector:
    app: tinkoff-stock-app
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
  #externalIPs:
  #  - 158.160.5.6
