kubernetes/tinkoff-stock-app/ingress_tinkoff-stock-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinkoff-stock-app
spec:
  rules:
    - http:
        paths:
          - path: /tinkoff-stock-app
            pathType: Prefix
            backend:
              service:
                name: tinkoff-stock-app
                port:
                  number: 80
